--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-com.viz.discount.RESTRICT=100
-com.viz.discount.DISC=5
-com.viz.discount.DISC_EMP=0.3
-com.viz.discount.DISC_AFF=0.1
-com.viz.discount.DISC_OLD=0.05
-com.viz.discount.TIME_THRESOLD=2
+com.viz.discount.restrict=100
+com.viz.discount.discount=5
+com.viz.discount.discountForEmployee=0.3
+com.viz.discount.discountForAffiliated=0.1
+com.viz.discount.discountForOldCustomer=0.05
+com.viz.discount.timeThresold=2
